@@ -4,7 +4,12 @@ Whiteboard CHANGES
 
 Not to mention all bugfixes and rewrites.
 
-Coccinella-0.94.10 (04????): 	Short summary --
+Coccinella-0.94.11 (040601): 	Short summary --
+
+        - internal ip not always set correctly which made some file transfers
+	  to fail
+
+Coccinella-0.94.10 (040528): 	Short summary --
 
         - STRINGPREP fixes in roster, browse, disco,...
 	- minor fixes for XMPP (ejabberd and jabberd2)
